# raspberry-pi-detector

./: .gitmodules
models/: best_block_int8.onnx
src/serial_connector/: CMakeLists.txt  package.xml
src/serial_connector/include/serial_connector/: serial_connector_node.hpp  serial_processor.hpp  transfer_protocol.hpp  verification_algorithm.hpp
src/serial_connector/src/: serial_connector_node.cpp
src/yolo_interfaces/: CMakeLists.txt  package.xml
src/yolo_interfaces/msg/: YOLOMsg.msg
src/yolo_interfaces/srv/: QRCodeService.srv  YOLOService.srv
src/yolo_srv/: CMakeLists.txt  package.xml
src/yolo_srv/config/: yolo_srv.yaml
src/yolo_srv/include/yolo_srv/: camera.hpp  yolo_model.hpp  yolo_node.hpp
src/yolo_srv/src/: yolo_srv.cpp
